MODORDERS-1254. Fix sonar complains